# tuc

./: CHANGELOG.md  Cargo.toml  README.md  benchmark.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
doc/: README.md  example  screencast.sh  tuc.1  tuc.1.md
playground/: index.html  polyfill.js
src/: args.rs  bounds.rs  cut_bytes.rs  cut_lines.rs  cut_str.rs  cut_str_fixed_delim.rs  fast_lane.rs  finders.rs  help.rs  json.rs  lib.rs  multibyte_str.rs  options.rs  plan.rs  read_utils.rs  stream.rs  tmp_implementation.rs
src/bounds/: mod.rs  prove.rs  prove2.rs  prove3.rs  side.rs  side_new.rs  side_positive.rs  userbounds.rs  userboundslist.rs
src/finders/: common.rs  fixed.rs  fixed_greedy.rs  mod.rs  regex.rs
tests/: cli.rs
