[package]
name = "tuc"
description = "When cut doesn't cut it"
version = "1.2.0"
authors = ["Riccardo Attilio Galli <riccardo@sideralis.org>"]
edition = "2018"
homepage = "https://github.com/riquito/tuc"
repository = "https://github.com/riquito/tuc"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["cli", "terminal", "text"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
bstr = "1.11.3"
memchr = "2.7.4"
pico-args = { version = "0.5.0", features = ["short-space-opt", "combined-flags", "eq-separator"] }
regex = { version = "1.11", default-features = false, features = ["std", "unicode-bool", "unicode-perl", "unicode-gencat"], optional = true }
serde_json = "1.0.138"

[features]
default = ["regex", "fast-lane"]
fast-lane = []

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = { version = "3.1.3",  default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = "debuginfo"
