[package]
name = "tuc"
description = "When cut doesn't cut it"
version = "1.3.0"
authors = ["Riccardo Attilio Galli <riccardo@sideralis.org>"]
edition = "2024"
homepage = "https://github.com/riquito/tuc"
repository = "https://github.com/riquito/tuc"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["cli", "terminal", "text"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
bstr = "1.12.0"
itertools = "0.14.0"
memchr = "2.7.6"
memmap2 = "0.9.8"
pico-args = { version = "0.5.0", features = ["short-space-opt", "combined-flags", "eq-separator"] }
regex = { version = "1.11", optional = true }
serde_json = "1.0.145"

[features]
default = ["regex", "fast-lane"]
fast-lane = []

#[profile.dev]
#debug-assertions = false

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = { version = "3.1.3",  default-features = false }
shlex = "1.3"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = "debuginfo"
